--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span>Y</span>
     </div>
     <div class="description">
-        <span>BUAT AISYAHH</span>
+        <span>RAWRRR</span>
     </div>
     <div class="button">
         <button>
